# django-data-exporter

./: MANIFEST.in  README.md  pyproject.toml
django_data_exporter/: README.md  examples.py  mixins.py  utils.py  views.py
django_data_exporter/static/django_data_exporter/js/: exporter.js
django_data_exporter/templates/django_data_exporter/: export_preview.html  pdf_template.html
