[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-data-exporter"
version = "0.1.0"
authors = [
    { name = "Pablo L.", email = "placiana@dc.uba.ar" },
]
description = "A reusable Django app for previewing and exporting data in multiple formats."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
xlsx = ["openpyxl"]
pdf = ["weasyprint"]

[tool.setuptools]
packages = ["django_data_exporter"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*.html", "templates/*/*.html", "static/*.js", "static/*/*.js", "static/*/*/*.js"]
